--- a/second-project.css
+++ b/second-project.css
@@ -49,7 +49,7 @@ body {
 
 /**start-of-header**/
 header {
-  background-image: url("../Images/landing.jpg");
+  background-image: url("landing.jpg");
   background-size: cover;
   height: 100vh;
   position: relative;
@@ -347,7 +347,7 @@ header .container .links li:hover a {
 }
 .design-over {
   background-color: rgb(0 0 0 / 60%);
-  background-image: url("../Images/design-features.jpg");
+  background-image: url("design-features.jpg");
   background-size: cover;
 }
 
